<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="@color/colorBackground"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:animateLayoutChanges="true"
        android:id="@+id/root"
        android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/main_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0dp">

        <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <include
                    android:id="@+id/toolbar"
                    layout="@layout/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_scrollFlags="scroll|enterAlways"/>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:id="@+id/emptyListLayout"
                                                           android:background="@color/colorBackground"
                                                           android:layout_height="match_parent">


            <androidx.appcompat.widget.AppCompatImageView android:layout_width="wrap_content"
                                                          android:id="@+id/imageLogo"
                                                          android:scaleType="fitCenter"
                                                          app:layout_constraintStart_toStartOf="parent"
                                                          app:layout_constraintEnd_toEndOf="parent"
                                                          android:src="@mipmap/ic_launcher"
                                                          android:layout_height="wrap_content"
                                                          android:layout_marginBottom="8dp"
                                                          app:layout_constraintBottom_toTopOf="@+id/textViewError"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/type_to_search"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:padding="20dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1.Nasa"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.55"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:background="@color/colorBackground"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                android:layout_width="match_parent"
                android:visibility="invisible"
                android:layout_height="match_parent"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <include layout="@layout/progress_bar"
             android:id="@+id/progressBar"
             android:layout_width="match_parent"
             android:visibility="gone"
             tools:visibility="visible"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>