...
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:paddingBottom="18dp"
                                                           android:layout_height="wrap_content">


            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewDate"
                    android:layout_width="match_parent"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp"
                    android:textSize="14sp"
...
